test/shouldPass/expr/_plusStr.pas
program Sample;
var
  i : string;

begin
  i := 'aa' + 'ab'; // concat strings
end.
