test/shouldFail/expr/minusStr.pas
program Sample;
var
  i : string;

begin
  i := 'baac' - 'a';
//     ^^^^^^^^^^^^
// Operator '-' cannot be applied to string and string
end.
